update and delete

--- a/FE/employees/src/app/components/employees/employees.component.html
+++ b/FE/employees/src/app/components/employees/employees.component.html
@@ -24,6 +24,7 @@
             <th scope="col">Name</th>
             <th scope="col">Email</th>
             <th scope="col">Salary</th>
+            <th>Action</th>
         </tr>
     </thead>
     <tbody>
@@ -32,6 +33,10 @@
             <td>{{ emp.name }}</td>
             <td>{{ emp.email }}</td>
             <td>{{ emp.salary }}</td>
+            <td>
+                <button class="btn btn-danger btn-sm" (click)="deleteData(emp.id)">Delete</button>
+                <button class="btn btn-warning btn-sm mx-2" routerLink="edit/{{ emp.id }}">Edit</button>
+            </td>
         </tr>
     </tbody>
 </table>
